# mergequeue-wf

./: .gitignore  pyproject.toml
.config/: mq.toml
.github/actions/nx-pr-targets/: action.yml
.github/workflows/: factory.yaml  pr.yaml  pr_targets.yaml  release.yaml
.trunk/: trunk.yaml
bazel/bravo/: bravo.txt
bazel/charlie/: charlie.txt
bazel/delta/: delta.txt
bazel/echo/: echo.txt
nx/: README.md  nx.json  package.json
nx/alpha/: alpha.txt  project.json
nx/apps/wordcounter/: project.json  wordcounter.js
nx/bravo/: bravo.txt  project.json
nx/charlie/: charlie.txt  project.json
nx/delta/: delta.txt  project.json
nx/echo/: echo.txt  project.json
nx/foxtrot/: foxtrot.txt  project.json
nx/golf/: golf.txt  project.json
tools/: README.md  TESTING_MQ.md  detect_impacted_nx_targets.py  upload_nx_targets.py
uv/: README.md
uv/apps/wordcounter/: pyproject.toml  wordcounter.py
uv/lib/alpha/: alpha.py  alpha.txt  pyproject.toml
uv/lib/bravo/: bravo.py  pyproject.toml
uv/lib/charlie/: charlie.py  pyproject.toml
uv/lib/common/: __init__.py  common.py  pyproject.toml
uv/lib/delta/: delta.py  pyproject.toml
uv/lib/echo/: echo.py  pyproject.toml
uv/lib/foxtrot/: foxtrot.py  foxtrot.txt  pyproject.toml
uv/lib/golf/: golf.py  golf.txt  pyproject.toml
