[project]
name = "uv-alpha"
version = "0.1.0"
description = "Alpha word list module"
requires-python = ">=3.8"
dependencies = ["uv-common"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Include all Python files and data files in the current directory as the package
include = ["alpha.py", "__init__.py", "alpha.txt"]


[tool.uv.sources]
uv-common = { workspace = true }
