[project]
name = "uv-bravo"
version = "0.1.0"
description = "Bravo word list module"
requires-python = ">=3.8"
dependencies = ["uv-common"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["bravo.py", "__init__.py", "bravo.txt"]


[tool.uv.sources]
uv-common = { workspace = true }
