[project]
name = "uv-charlie"
version = "0.1.0"
description = "Charlie word list module"
requires-python = ">=3.8"
dependencies = ["uv-common"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["charlie.py", "__init__.py", "charlie.txt"]


[tool.uv.sources]
uv-common = { workspace = true }
