[project]
name = "uv-delta"
version = "0.1.0"
description = "Delta word list module"
requires-python = ">=3.8"
dependencies = ["uv-common"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["delta.py", "__init__.py", "delta.txt"]


[tool.uv.sources]
uv-common = { workspace = true }
