[project]
name = "uv-echo"
version = "0.1.0"
description = "Echo word list module"
requires-python = ">=3.8"
dependencies = ["uv-common"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["echo.py", "__init__.py", "echo.txt"]


[tool.uv.sources]
uv-common = { workspace = true }
