[project]
name = "uv-foxtrot"
version = "0.1.0"
description = "Foxtrot word list module"
requires-python = ">=3.8"
dependencies = ["uv-common"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["foxtrot.py", "__init__.py", "foxtrot.txt"]


[tool.uv.sources]
uv-common = { workspace = true }
