[project]
name = "uv-golf"
version = "0.1.0"
description = "Golf word list module"
requires-python = ">=3.8"
dependencies = ["uv-common"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["golf.py", "__init__.py", "golf.txt"]


[tool.uv.sources]
uv-common = { workspace = true }
